@@ -1,4 +1,5 @@
 version 2024a, in progress
+- $sysinfo bundle: add gnuplot version as scalar ("gnuplot")
 - "plot" command: update the help text and apply a fix for the
   case of showing multiple bands
 - Fix broken backward compatibility in handling of backslash
